--- a/week3/mlops/mlops/unit_0_setup/pipelines/example_pipeline/metadata.yaml
+++ b/week3/mlops/mlops/unit_0_setup/pipelines/example_pipeline/metadata.yaml
@@ -4,6 +4,7 @@ blocks:
   configuration: {}
   downstream_blocks:
   - fill_in_missing_values
+  - load_titanic_histogram_t6
   executor_config: null
   executor_type: local_python
   has_callback: null
@@ -20,6 +21,7 @@ blocks:
   configuration: {}
   downstream_blocks:
   - export_titanic_clean
+  - fill_in_missing_values_bar_chart_r8
   executor_config: null
   executor_type: local_python
   has_callback: null
@@ -70,5 +72,44 @@ spark_config: {}
 tags: []
 type: python
 uuid: example_pipeline
-variables_dir: /root/.mage_data/unit_0_setup
-widgets: []
+variables_dir: /home/src/mage_data/unit_0_setup
+widgets:
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    buckets: 10
+    chart_type: histogram
+    x: x
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: load_titanic_histogram_t6
+  retry_config: null
+  status: executed
+  timeout: null
+  type: chart
+  upstream_blocks:
+  - load_titanic
+  uuid: load_titanic_histogram_t6
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    chart_style: vertical
+    chart_type: bar chart
+    x: x
+    y: y
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: fill_in_missing_values_bar chart_r8
+  retry_config: null
+  status: failed
+  timeout: null
+  type: chart
+  upstream_blocks:
+  - fill_in_missing_values
+  uuid: fill_in_missing_values_bar_chart_r8
