--- a/week3/mlops/mlops/homework_03/pipelines/hw_load/metadata.yaml
+++ b/week3/mlops/mlops/homework_03/pipelines/hw_load/metadata.yaml
@@ -4,7 +4,8 @@ blocks:
   configuration:
     file_source:
       path: homework_03/data_loaders/load_taxi_data.py
-  downstream_blocks: []
+  downstream_blocks:
+  - prepare_py
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -16,6 +17,43 @@ blocks:
   type: data_loader
   upstream_blocks: []
   uuid: load_taxi_data
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: homework_03/transformers/prepare_py.py
+  downstream_blocks:
+  - train
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: prepare.py
+  retry_config: null
+  status: executed
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - load_taxi_data
+  uuid: prepare_py
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: homework_03/transformers/train.py
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: train
+  retry_config: null
+  status: executed
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - prepare_py
+  uuid: train
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
