--- a/week3/mlops/mlops/unit_2_training/global_data_products.yaml
+++ b/week3/mlops/mlops/unit_2_training/global_data_products.yaml
@@ -3,3 +3,12 @@ training_set_ii:
   object_uuid: sklearn__training
   project: unit_2_training
   repo_path: /home/src/mlops/unit_2_training
+training_set_taxi:
+  object_type: pipeline
+  object_uuid: sklearn__training
+  outdated_after:
+    seconds: 800
+  project: unit_2_training
+  repo_path: /home/src/mlops/unit_2_training
+  settings:
+    build_bis: {}
