--- a/week3/mlops/mlops/unit_2_training/pipelines/sklearn__training/metadata.yaml
+++ b/week3/mlops/mlops/unit_2_training/pipelines/sklearn__training/metadata.yaml
@@ -3,21 +3,115 @@ blocks:
   color: null
   configuration:
     file_source:
+      path: unit_2_training/data_loaders/ingest_bis.py
+  downstream_blocks:
+  - prepare_bis
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: ingest_bis
+  retry_config: null
+  status: executed
+  timeout: null
+  type: data_loader
+  upstream_blocks: []
+  uuid: ingest_bis
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: unit_2_training/transformers/prepare_bis.py
+  downstream_blocks:
+  - build_bis
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: prepare_bis
+  retry_config: null
+  status: executed
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - ingest_bis
+  uuid: prepare_bis
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: unit_2_training/transformers/build_bis.py
+  downstream_blocks:
+  - training_set
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: build_bis
+  retry_config: null
+  status: executed
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - prepare_bis
+  uuid: build_bis
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
       path: unit_2_training/global_data_products/training_set.py
     global_data_product:
-      uuid: training_set_ii
-  downstream_blocks: []
+      uuid: training_set_taxi
+  downstream_blocks:
+  - load_models
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
   name: training set
   retry_config: null
-  status: executed
+  status: not_executed
   timeout: null
   type: global_data_product
-  upstream_blocks: []
+  upstream_blocks:
+  - build_bis
   uuid: training_set
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: unit_2_training/markdowns/dynamic_block.md
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: markdown
+  name: Dynamic block
+  retry_config: null
+  status: updated
+  timeout: null
+  type: markdown
+  upstream_blocks: []
+  uuid: dynamic_block
+- all_upstream_blocks_executed: false
+  color: teal
+  configuration:
+    dynamic: true
+    file_source:
+      path: unit_2_training/custom/load_models.py
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: load_models
+  retry_config: null
+  status: updated
+  timeout: null
+  type: custom
+  upstream_blocks:
+  - training_set
+  uuid: load_models
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
@@ -42,5 +136,9 @@ tags:
 - Sklearn
 type: python
 uuid: sklearn__training
+variables:
+  split_on_feature: lpep_pickup_datetime
+  split_on_feature_value: '2024-02-01'
+  target: duration
 variables_dir: /home/src/mage_data/unit_2_training
 widgets: []
