--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -2,7 +2,7 @@ services:
     mlflow:
       build:
         context: .
-        dockerfile: mlflow.dockerfile
+        dockerfile: MLflow/mlflow.dockerfile
       ports:
         - "5000:5000"
       volumes:
