--- a/project/MLflow/requirements.txt
+++ b/project/MLflow/requirements.txt
@@ -1,1 +1,13 @@
 mlflow
+jupyter
+scikit-learn
+pandas
+seaborn
+hyperopt
+xgboost
+fastparquet
+
+requests-cache 
+retry-requests 
+numpy  
+skforecast
