--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -1,14 +1,15 @@
 services:
-    mlflow:
-      build:
-        context: .
-        dockerfile: MLflow/mlflow.dockerfile
-      ports:
-        - "5000:5000"
-      volumes:
-        - "${PWD}/mlflow:/home/mlflow/"
-      networks:
-        - app-network
+  mlflow:
+    build:
+      context: .
+      dockerfile: MLflow/dockerfile
+    ports:
+      - "5000:5000"
+    volumes:
+      - "${PWD}/data :/data"
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
