--- a/project/.env.dev
+++ b/project/.env.dev
@@ -2,8 +2,8 @@ ENV=development
 
 # Project settings
 # If you start the project with ./start.sh, the project name and code path will already be set.
-PROJECT_NAME=$PROJECT_NAME
-MAGE_CODE_PATH=$MAGE_CODE_PATH
+PROJECT_NAME="Project_Week7"
+MAGE_CODE_PATH="/home/src"
 
 # Load custom files
 PYTHONPATH="${MAGE_CODE_PATH}/${PROJECT_NAME}:${PYTHONPATH}"
@@ -12,11 +12,11 @@ PYTHONPATH="${MAGE_CODE_PATH}/${PROJECT_NAME}:${PYTHONPATH}"
 MAGE_PRESENTERS_DIRECTORY="$PROJECT_NAME/presenters"
 
 # Database
-POSTGRES_HOST=magic-database
+POSTGRES_HOST=localhost
 POSTGRES_DB=magic
 POSTGRES_PASSWORD=password
 POSTGRES_USER=postgres
-MAGE_DATABASE_CONNECTION_URL="postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DB}"
+#MAGE_DATABASE_CONNECTION_URL="postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DB}"
 
 # Alerts
 SMTP_EMAIL=$SMTP_EMAIL
