--- a/project/MLflow/dockerfile
+++ b/project/MLflow/dockerfile
@@ -2,13 +2,16 @@ FROM python:3.10-slim
 
 WORKDIR /MLflow
 COPY ./MLflow/requirements.txt /MLflow/requirements.txt
+COPY ./MLflow/MLOPS_Project.ipynb /MLflow/MLOPS_Project.ipynb
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir --upgrade -r /MLflow/requirements.txt
+RUN cd ..
 
-
+EXPOSE 8888
 CMD [ \
     "mlflow", "server", \
-    "--backend-store-uri", "sqlite:///./mlflow.db", \
+    "--backend-store-uri", "sqlite:///mlflow.db", \
     "--host", "0.0.0.0", \
     "--port", "5000" \
 ]
+
