--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -5,11 +5,78 @@ services:
       dockerfile: MLflow/dockerfile
     ports:
       - "5000:5000"
+      - "8888:8888"
     volumes:
       - "${PWD}/data :/data"
     networks:
       - app-network
 
+
+  mage:
+    image: mageai/mageai:latest
+    command: mage start ${PROJECT_NAME}
+    env_file:
+      - .env.dev
+    build:
+      context: .
+      dockerfile: Mage/Dockerfile
+    ports:
+      - 6789:6789
+    volumes:
+      - "${PWD}/mage :/mage"
+    # depends_on:
+    #   - magic-database
+    # restart: on-failure:5
+
+
+  magic-database:
+    image: pgvector/pgvector:0.6.0-pg16
+    env_file:
+      - .env.dev
+    ports:
+      - 5432:5432
+    volumes:
+      - ~/.postgres/data:/var/lib/postgresql/data
+      # Custom database initialization scripts (optional).
+      # - ./scripts/database:/docker-entrypoint-initdb.d
+    # restart: always
+    networks:
+      - app-network
+
+
+
 networks:
   app-network:
     driver: bridge
+
+
+
+
+
+#   magic-platform:
+#     env_file:
+#       - .env.dev
+#     build:
+#       context: .
+#       dockerfile: Mage/Dockerfile
+#     # command: /app/run_app.sh mage start $PROJECT_NAME
+#     ports:
+#       - 6789:6789
+#     volumes:
+#       # Mount your local codebase to the container.
+#       - .:/$MAGE_CODE_PATH
+#       # Store the data output on local machine to easily debug (optional).
+#       - ~/.mage_data:/$MAGE_CODE_PATH/mage_data
+#       # Initial credentials to create an IAM user with limited permissions for deployment.
+#       - ~/.aws:/root/.aws
+#       # Local machine’s SSH keys to pull and push to your GitHub repository.
+#       - ~/.ssh:/root/.ssh:ro
+#       # Local machine’s GitHub configs
+#       - ~/.gitconfig:/root/.gitconfig:ro
+#     restart: on-failure:5
+#     networks:
+#       - app-network
+#     depends_on:
+#       - magic-database
+#     stdin_open: true # used for interactive debugging
+#     tty: true # used for interactive debugging
